--- a/index.html
+++ b/index.html
@@ -76,22 +76,12 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-2 publication-title">Test-time Adaptation with Slot-Centric Models</h1>
+          <h1 class="title is-2 publication-title">Aligning Text-to-Image Diffusion Models with Reward Backpropagation</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://mihirp1998.github.io/">Mihir Prabhudesai</a><sup>1</sup>,</span>
             <span class="author-block">
               <a href="https://anirudh9119.github.io/">Anirudh Goyal</a><sup>2</sup>,</span>
-            <span class="author-block">
-              <a href="https://research.google/people/107637/">Sujoy Paul</a><sup>3</sup>,</span>
-            <span class="author-block">
-              <a href="https://www.sjoerdvansteenkiste.com/">Sjoerd van Steenkiste</a><sup>3</sup>,</span>
-            <span class="author-block">
-              <a href="https://msajjadi.com/">Mehdi S. M. Sajjadi</a><sup>3</sup>,</span>
-            <span class="author-block">
-              <a href="https://research.google/people/GauravAggarwal/">Gaurav Aggarwal</a><sup>3</sup>,</span>
-            <span class="author-block">
-              <a href="https://tkipf.github.io/">Thomas Kipf</a><sup>3</sup>,</span>
             <span class="author-block">
               <a href="https://www.cs.cmu.edu/~dpathak/">Deepak Pathak</a><sup>1</sup>,</span>
             <span class="author-block">
@@ -100,18 +90,17 @@
 
           <div class="is-size-5 publication-authors">
             <span class="author-block"><sup>1</sup>Carnegie Mellon University,</span>
-            <span class="author-block"><sup>2</sup>DeepMind,</span>
-            <span class="author-block"><sup>3</sup>Google Research</span>
+            <span class="author-block"><sup>2</sup>Google DeepMind</span>
           </div>
-          <div class="is-size-5 pt-2 pb-2 has-text-centered publication-venue">
-            <span>ICML 2023</span>
-          </div>
+          <!-- <div class="is-size-5 pt-2 pb-2 has-text-centered publication-venue">
+            <span>In Submission</span>
+          </div> -->
 
           <div class="column has-text-centered">
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href="https://arxiv.org/pdf/2203.11194"
+                <a href="#"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
@@ -120,7 +109,7 @@
                 </a>
               </span>
               <span class="link-block">
-                <a href="https://arxiv.org/abs/2203.11194"
+                <a href="#"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
@@ -140,7 +129,7 @@
               </span> -->
               <!-- Code Link. -->
               <span class="link-block">
-                <a href="https://github.com/mihirp1998/Slot-TTA.git"
+                <a href="https://github.com/mihirp1998/AlignProp/"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
@@ -214,7 +203,7 @@
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <p>
-            Current visual detectors, though impressive within their training distribution, often fail to parse out-of-distribution scenes into their constituent entities. Recent test-time adaptation methods use auxiliary self-supervised losses to adapt the network parameters to each test example independently and have shown promising results towards generalization outside the training distribution for the task of image classification. <br><br> In our work, we find evidence that these losses are insufficient for the task of scene decomposition, without also considering architectural inductive biases. Recent slot-centric generative models attempt to decompose scenes into entities in a self-supervised manner by reconstructing pixels. <br><br> Drawing upon these two lines of work, we propose Slot-TTA, a semi-supervised slot-centric scene decomposition model that at test time is adapted per scene through gradient descent on reconstruction or cross-view synthesis objectives. We evaluate Slot-TTA across multiple input modalities, images or 3D point clouds, and show substantial out-of-distribution performance improvements against state-of-the-art supervised feed-forward detectors,  and alternative test-time adaptation methods. 
+            Text-to-image diffusion models have recently emerged at the forefront of image generation, powered by very large-scale unsupervised or weakly supervised text-to-image training datasets.  Due to the weakly supervised   training,  controlling  their behavior in downstream tasks, such as maximizing human-perceived image quality,  image-text alignment, or ethical image generation, is difficult. Recent works finetune diffusion models to downstream reward functions using vanilla reinforcement learning, notorious for the high variance of the gradient estimators. In this paper, we propose AlignProp, a method that aligns diffusion models to downstream reward functions using end-to-end backpropagation of the reward gradient through the denoising process. While naive implementation of such backpropagation would require prohibitive memory resources for storing the partial derivatives of modern text-to-image models, AlignProp finetunes low-rank adapter weight modules and uses gradient checkpointing, to render its memory usage viable. We test AlignProp in finetuning diffusion models to various objectives, such as image-text semantic alignment, aesthetics, compressibility and controllability of the number of objects present, as well as their combinations.  We show AlignProp  achieves higher rewards in fewer training steps than alternatives, while being conceptually simpler, making it a straightforward choice for optimizing diffusion models for differentiable reward functions of interest. 
           </p>
         </div>
       </div>
@@ -245,7 +234,7 @@
               </h2>
               <p style="padding: 10px;">
               </p><div id="method-overview-wrapper">
-                  <img src="static/images/slot-tta_model_fig.png" alt="Slot TTA method." class="method-overview-full-img  method-overview" draggable="false" style="display: inline;">
+                  <img src="method.pdf" alt="Slot TTA method." class="method-overview-full-img  method-overview" draggable="false" style="display: inline;">
               </div>
                       <p style="padding: 10px;">
                   </p><div class="method-overview-text has-text-justified">
