--- a/index.html
+++ b/index.html
@@ -170,15 +170,15 @@
   </div>
 </section>
 
-<section class="section">
+<section class="section pt-2">
   <div class="container is-max-desktop">
     <!-- Abstract. -->
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
-        <h2 class="title is-3">Abstract</h2>
+        <h2 class="title is-3 p">Abstract</h2>
         <div class="content has-text-justified">
           <p>
-            Text-to-image diffusion models have recently emerged at the forefront of image generation, powered by very large-scale unsupervised or weakly supervised text-to-image training datasets.  Due to the weakly supervised   training,  controlling  their behavior in downstream tasks, such as maximizing human-perceived image quality,  image-text alignment, or ethical image generation, is difficult. Recent works finetune diffusion models to downstream reward functions using vanilla reinforcement learning, notorious for the high variance of the gradient estimators. In this paper, we propose AlignProp, a method that aligns diffusion models to downstream reward functions using end-to-end backpropagation of the reward gradient through the denoising process. While naive implementation of such backpropagation would require prohibitive memory resources for storing the partial derivatives of modern text-to-image models, AlignProp finetunes low-rank adapter weight modules and uses gradient checkpointing, to render its memory usage viable. We test AlignProp in finetuning diffusion models to various objectives, such as image-text semantic alignment, aesthetics, compressibility and controllability of the number of objects present, as well as their combinations.  We show AlignProp  achieves higher rewards in fewer training steps than alternatives, while being conceptually simpler, making it a straightforward choice for optimizing diffusion models for differentiable reward functions of interest. 
+            Text-to-image diffusion models have recently emerged at the forefront of image generation, powered by very large-scale unsupervised or weakly supervised text-to-image training datasets.  Due to the unsupervised   training,  controlling  their behavior in downstream tasks, such as maximizing human-perceived image quality,  image-text alignment, or ethical image generation, is difficult. Recent works finetune diffusion models to downstream reward functions using vanilla reinforcement learning, notorious for the high variance of the gradient estimators. In this paper, we propose AlignProp, a method that aligns diffusion models to downstream reward functions using end-to-end backpropagation of the reward gradient through the denoising process. While naive implementation of such backpropagation would require prohibitive memory resources for storing the partial derivatives of modern text-to-image models, AlignProp finetunes low-rank adapter weight modules and uses gradient checkpointing, to render its memory usage viable. We test AlignProp in finetuning diffusion models to various objectives, such as image-text semantic alignment, aesthetics, compressibility and controllability of the number of objects present, as well as their combinations.  We show AlignProp  achieves higher rewards in fewer training steps than alternatives, while being conceptually simpler, making it a straightforward choice for optimizing diffusion models for differentiable reward functions of interest. 
           </p>
         </div>
       </div>
@@ -214,8 +214,8 @@
                       <p style="padding: 10px;">
                   </p><div class="method-overview-text has-text-justified">
                       <p>
-                        <p class="has-text-weight-semibold">Model architecture for AlignProp. </p>
-                        Given a batch of prompts, AlignProp generates images from noise through DDIM Sampling. Subsequently, these generated images undergo evaluation by the Reward model to acquire a corresponding reward score. The optimization process involves updating the weights in the diffusion process by minimizing the negative of the obtained reward through gradient descent. To mitigate overfitting, we randomize the number of time-steps we backpropagate gradients to. 
+                        <!-- <p class="has-text-weight-semibold">Model architecture for AlignProp. </p> -->
+                        Given a batch of prompts, AlignProp generates images from noise through DDIM Sampling. The generated images are then evaluated using a Reward model to get a reward score. The optimization process involves updating the weights in the diffusion process by minimizing the negative of the obtained reward through gradient descent. To mitigate overfitting, we randomize the number of time-steps we backpropagate gradients to. 
                       </p>
                   </div>
               </div>
@@ -233,7 +233,7 @@
 
 
 
-        <h2 class="title is-3 has-text-centered">Disabling LoRA Weights</h2>
+        <!-- <h2 class="title is-3 has-text-centered">Disabling LoRA Weights</h2>
         <p>
           We illustrate the impact of deactivating finetuned LoRA weights across varying ranges of diffusion timesteps during inference. The visualization highlights that earlier timesteps predominantly contribute to semantic aspects, whereas the later timesteps are instrumental in capturing fine-grained details.
         </p>    
@@ -243,7 +243,7 @@
                  class="interpolation-image"
                  alt="Seg Acc Curve."/>       
           </div>                        
-        </div>         
+        </div>          -->
         <!-- <div class="columns mt-4">
           <div class="column"> 
             <div  id="interpolation-ex6-wrapper">
@@ -259,7 +259,11 @@
         <h2 class="title pt-5 has-text-centered">Sample and Data Efficiency in Reward Finetuning</h2>
         <div  class="content has-text-justified">
           <p>
-            Reward finetuning results  on multiple reward functions. In the top half of the figure, we compare the data efficiency of AlignProp and DDPO. In the bottom half of the figure we compare the convergence speed of AlignProp and DDPO. As seen AlignProp outperforms DDPO on both metrics.
+            <a href="https://arxiv.org/abs/2305.13301">DDPO</a> is the current state-of-the-art method for fine-tuning text-to-image models using reinforcement learning. 
+            However it uses REINFORCE for finetuning the diffusion process. RL methods such as REINFORCE are notorious for their high variance in gradients and thus often result in poor sample efficiency.
+            We on the other hand, do backpropogation and send gradients from the reward model to the diffusion process. This results in a significant boost in convergence speed and sample efficienncy.
+            In the top half of the figure, we compare the data efficiency of AlignProp and DDPO across various reward models. In the bottom half of the figure we compare the convergence speed of AlignProp and DDPO. 
+            As can be seen, AlignProp is about 25 times faster in training than DDPO. For instance on HPS v2 dataset scenario, AlignProp achieves a score of 2.8 in just 48 minutes, whereas DDPO requires approximately 23 hours.
             <div class="columns mt-4">
               <img src="./reward_tuning.png"
               class="interpolation-image"
@@ -273,13 +277,14 @@
   </div>
 </section>
 
-<section class="section">
+<!-- <section class="section">
   <div class="container is-max-widescreen">
     <div class="columns is-centered">
       <div class="column is-full-width">
         <h2 class="title is-3 has-text-centered">Generalization to new text prompts</h2>
         <p>
-          Qualitative comparison with baselines is conducted on novel animals that were not encountered during the training phase. In this scenario, both AlignProp and the baselines are trained using an Aesthetic reward model.
+          An important benefit of finetuning the diffusion model, over prompt or initial noise finetuning , is generalization to new prompts. Here, we evaluate AlignProp and baselines, on their capacity for generalization.
+          In the Figure above, we qualitatively compare the image generations on novel animals that were not encountered during the training phase. In this scenario, both AlignProp and the baselines are trained using an Aesthetic reward model.
         </p>    
         <div class="columns mt-4">
 
@@ -291,11 +296,11 @@
       </div>
     </div>
 </div>
-</section>
+</section> -->
     
 
 
-<section class="section">
+<!-- <section class="section">
   <div class="container is-max-widescreen">
     <div class="columns is-centered">
       <div class="column is-full-width">
@@ -313,7 +318,7 @@
       </div>
     </div>
 </div>
-</section>
+</section> -->
 
 
 
@@ -322,7 +327,7 @@
   <div class="container is-max-widescreen">
     <div class="columns is-centered">
       <div class="column is-full-width">
-        <h2 class="title is-3 has-text-centered">Mixing Results</h2>
+        <h2 class="title is-3 has-text-centered">Interactive Mixing Results</h2>
         <p>
           In this Figure we show additional mixing results between compressibilty and Aesthetic model. 
         </p>    
