--- a/index.html
+++ b/index.html
@@ -327,9 +327,9 @@
   <div class="container is-max-widescreen">
     <div class="columns is-centered">
       <div class="column is-full-width">
-        <h2 class="title is-3 has-text-centered">Interactive Mixing Results</h2>
+        <h2 class="title is-3 has-text-centered">Mixing Results</h2>
         <p>
-          In this Figure we show additional mixing results between compressibilty and Aesthetic model. 
+          In this context, we demonstrate the ability of AlignProp to interpolate between different reward functions during the inference phase. We draw inspiration from the concept presented in <a href="https://arxiv.org/abs/2203.05482">ModelSoup</a>, which showcases how averaging the weights of multiple fine-tuned models can enhance image classification accuracy.Expanding upon this idea, we extend it to the domain of image editing, revealing that averaging the LoRA weights of diffusion models trained with distinct reward functions can yield images that satisfy multiple reward criteria. AlignProp adeptly demonstrates its capacity to interpolate between distinct reward functions, achieving the highest overall reward when the mixing coefficient is set to 0.5.
         </p>    
         <div class="columns mt-4">
 
