--- a/index.html
+++ b/index.html
@@ -4,27 +4,27 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta charset="utf-8">
   <meta property="og:title" content="Align-Prop" />
-  <meta property="og:description" content="We propose Slot-TTA, a  semi-supervised slot-centric scene decomposition model that at test time is adapted per scene  through gradient descent on reconstruction or cross-view synthesis objectives." />
-  <meta property="og:url" content="https://slot-tta.github.io/" />
-  <meta property="og:image" content="https://slot-tta.github.io/static/images/preview.jpeg" />
+  <meta property="og:description" content="We propose AlignProp, a method that uses reward backpropogation for the alignment of large-scale text-to-image diffusion models." />
+  <meta property="og:url" content="https://align-prop.github.io/" />
+  <meta property="og:image" content="https://align-prop.github.io/method.png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="628" />
 
   <meta name="viewport" content="initial-scale=1" />
-  <meta name="description" content="We propose Slot-TTA, a semi-supervised slot-centric scene decomposition model that at test time is adapted per scene  through gradient descent on reconstruction or cross-view synthesis objectives.">
-  <meta name="keywords" content="object-centric learning, test-time adaptation, entity-centric models, scene decomposition, Slot-TTA, GFS-Nets">
+  <meta name="description" content="We propose AlignProp, a method that uses reward backpropogation for the alignment of large-scale text-to-image diffusion models.">
+  <meta name="keywords" content="alignment, diffusion models, reinforcement learning, text-to-image models, direct reward learning">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- twitter -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Align-Prop" />
+  <meta name="twitter:title" content="AlignProp" />
   <meta name="twitter:description"
-      content="Align-Prop, a semi-supervised slot-centric scene decomposition model that at test time is adapted per scene through gradient descent on reconstruction or cross-view synthesis objectives." />
+      content="We propose AlignProp, a method that uses reward backpropogation for the alignment of large-scale text-to-image diffusion models." />
   <meta name="twitter:url" content="https://align-prop.github.io/" />
-  <meta name="twitter:image" content="https://align-prop.github.io/static/images/preview.jpeg" />
+  <meta name="twitter:image" content="https://align-prop.github.io/method.png" />
   <meta name="twitter:site" content="@mihirp98" />
-  <meta name="twitter:image" content="https://align-prop.github.io/static/images/preview.jpeg" />
-  <meta name="twitter:image:src" content="https://align-prop.github.io/static/images/preview.jpeg" />
+  <meta name="twitter:image" content="https://align-prop.github.io/method.png" />
+  <meta name="twitter:image:src" content="https://align-prop.github.io/method.png" />
   <meta name="twitter:image_alt" content="align-prop" />
 
   <!-- Google Tag Manager -->
@@ -209,7 +209,7 @@
               </h2>
               <p style="padding: 10px;">
               </p><div id="method-overview-wrapper">
-                  <img src="method.png" alt="Slot TTA method." class="method-overview-full-img  method-overview" draggable="false" style="display: inline;">
+                  <img src="method.png" alt="AlignProp method." class="method-overview-full-img  method-overview" draggable="false" style="display: inline;">
               </div>
                       <p style="padding: 10px;">
                   </p><div class="method-overview-text has-text-justified">
@@ -442,7 +442,7 @@
   <div class="container">
     <div class="content has-text-centered">
       <a class="icon-link"
-         href="https://arxiv.org/pdf/2203.11194">
+         href="https://arxiv.org/pdf/2310.03739.pdf">
         <i class="fas fa-file-pdf"></i>
       </a>
       <a class="icon-link" href="https://github.com/align-prop/align-prop.github.io" class="external-link" disabled>
