--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href="https://arxiv.org/pdf/2310.03739v1"
+                <a href="https://arxiv.org/pdf/2310.03739v2"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
@@ -433,7 +433,7 @@
   <div class="container">
     <div class="content has-text-centered">
       <a class="icon-link"
-         href="https://arxiv.org/pdf/2310.03739.pdf">
+         href="https://arxiv.org/pdf/2310.03739v2.pdf">
         <i class="fas fa-file-pdf"></i>
       </a>
       <a class="icon-link" href="https://github.com/align-prop/align-prop.github.io" class="external-link" disabled>
